--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,7 @@ set -s focus-events on
 
 set -g prefix2 C-a                        # GNU-Screen compatible prefix
 bind C-a send-prefix -2
+set -g prefix C-S-M
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
